--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     compile name: 'Railcraft', version: '1.7.10-9.4.0.0', ext: 'jar'
     compile "codechicken:NotEnoughItems:1.7.10-1.0.3.57:dev"
 	compile "com.enderio:EnderIO:1.7.10-2.3.0.417_beta:dev"
+	// ExAstris and ExCompressum are also in the libs folder since I couldn't find a repo for them
 }
 
 processResources
