--- a/build.gradle
+++ b/build.gradle
@@ -82,13 +82,13 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 	
 	compile "exnihilo:Ex-Nihilo:1.38-53:deobf"
-    //compile "com.gregoriust.gregtech:gregtech_1.7.10:5.07.07:dev"  I can't put this in here because of API differences with GT5U, so it's going in the libs folder
-    //compile "net.sengir.forestry:forestry_1.7.10:4.2.10.58:dev"
     compile name: 'Railcraft', version: '1.7.10-9.4.0.0', ext: 'jar'
     compile "codechicken:NotEnoughItems:1.7.10-1.0.5.120:dev"
 	compile "com.enderio:EnderIO:1.7.10-2.3.0.417_beta:dev"
-	// ExAstris and ExCompressum are also in the libs folder since I couldn't find a repo for them
-	// MineTweaker3 API is also in the libs folder, their maven repo is down
+	compile "co.q64.libs:ExAstris:1.7.10-1.16-36"
+	compile "co.q64.libs:ExCompressum:1.7.10-1.1.149"
+	compile "co.q64.libs:GregTech:5.09.31"
+	compile "co.q64.libs:MineTweaker:1.7.10-3.0.10B"
 	
 	embed "com.google:guice:q64"
 	embed "com.google:guice-multibindings:q64"
