--- a/build.gradle
+++ b/build.gradle
@@ -36,10 +36,10 @@ repositories {
         name 'tterrag'
         url 'http://maven.tterrag.com/'
     }
-	//maven {
-    //    name 'greg'
-    //    url 'http://files.minecraftforge.net/maven/'
-	//}
+	maven {
+        name 'curseforge'
+        url "https://minecraft.curseforge.com/api/maven/"
+	}
     maven { // This is needed to get my meta tools to compile
         name = "ic2, forestry"
         url = "http://maven.ic2.player.to/"
@@ -55,10 +55,6 @@ repositories {
     maven { // EnderIO & EnderCore
         name 'tterrag Repo'
         url "http://maven.tterrag.com"
-    }
-    ivy {
-        name 'Railcraft'
-        artifactPattern "http://addons-origin.cursecdn.com/files/2219/321/[module]_[revision].[ext]"
     }
     maven { // The repo from which to get waila
         name "Mobius Repo"
@@ -82,7 +78,7 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 	
 	compile "exnihilo:Ex-Nihilo:1.38-53:deobf"
-    compile name: 'Railcraft', version: '1.7.10-9.4.0.0', ext: 'jar'
+    compile "railcraft:RailCraft_1.7.10:9.12.2.0"
     compile "codechicken:NotEnoughItems:1.7.10-1.0.5.120:dev"
 	compile "com.enderio:EnderIO:1.7.10-2.3.0.417_beta:dev"
 	compile "co.q64.libs:ExAstris:1.7.10-1.16-36"
