--- a/.gitignore
+++ b/.gitignore
@@ -47,9 +47,7 @@ Temporary Items
 .apdisk
 
 ##########################################################################################
-My stuff
-gradlew*
-gradle/
+# My stuff
 .gradle/
 
 
