--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ buildscript {
 
 
 repositories {
+
+
 	maven {
         name 'CurseForge'
         url "https://minecraft.curseforge.com/api/maven/"
@@ -50,12 +52,17 @@ repositories {
 	name 'guice'
 	url "https://github.com/Quantum64/ExGregilo/tree/gh-pages" 
 	}
+	ivy {
+        name "MineTweaker3"
+        artifactPattern "http://minetweaker3.powerofbytes.com/download/[module]-([classifier]-)[revision].[ext]"
+    }
+	
     
 }
 
 apply plugin: 'forge'
 
-version = "1.1.0"
+version = "1.1.1"
 group= "co.q64.exgregilo" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "exgregilo"
 
@@ -87,12 +94,11 @@ dependencies {
     compile "railcraft:RailCraft_1.7.10:9.12.2.0"
     compile "codechicken:NotEnoughItems:1.7.10-1.0.5.120:dev"
 	compile "com.enderio:EnderIO:1.7.10-2.3.0.417_beta:dev"
-    compile "gregtech-5-unofficial:gregtech:5.09.31"
-    compile "co.q64.libs:ExAstris:1.7.10-1.16-36"
+    compile "gregtech-5-unofficial:gregtech:5.09.31:dev"
+	compile "exastris:Ex-Astris:MC1.7.10-1.16-36"
+	//compile "excompressum:excompressum-mc1.7.10-1.1.149"
+	compile "minetweaker3:MineTweaker3:1.7.10-3.0.10B"
 	compile "co.q64.libs:ExCompressum:1.7.10-1.1.149"
-	compile "co.q64.libs:MineTweaker:1.7.10-3.0.10B"
-	
-	
 	embed "com.google:guice:q64"
 	embed "com.google:guice-multibindings:q64"
 }
